# EbookExtractor

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
ebook_extractor/emulation/: __init__.py  book.py
ebook_extractor/export/: __init__.py  pdf.py
ebook_extractor/prototype/: book.py
ebook_extractor_cli/: __entry__.py
